--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,15 +1,15 @@
 .modal {
-    display: none; 
-    position: fixed; 
-    z-index: 5; 
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.4); 
-  }
-  
+  display: none;
+  position: fixed;
+  z-index: 5;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
 .modal-container {
   margin: 7.5% auto;
   border-radius: 5rem;
@@ -22,7 +22,11 @@
   align-items: center;
   padding: 2%;
   justify-content: space-between;
-  background: linear-gradient(176.32deg, rgb(28, 14, 184) -26.24%, rgba(56, 56, 55, 1) 96.98%);
+  background: linear-gradient(
+    176.32deg,
+    rgb(28, 14, 184) -26.24%,
+    rgba(56, 56, 55, 1) 96.98%
+  );
   overflow: hidden;
   box-sizing: border-box;
 }
@@ -31,7 +35,7 @@
   color: #fff;
   width: 50%;
   text-align: center;
-  font-size: 2.50rem;
+  font-size: 2.5rem;
   font-weight: 600;
   line-height: 3rem;
   box-sizing: border-box;
@@ -41,7 +45,7 @@
   width: 19.3rem;
   height: 5.7rem;
   border-radius: 1rem;
-  background: #DC7000;
+  background: #dc7000;
   font-size: 1.6rem;
   font-weight: 400;
   line-height: 3.269rem;
@@ -52,15 +56,15 @@
 
 .modal-errors {
   width: 100%;
-  max-height: 75rem; 
+  max-height: 75rem;
   display: flex;
   flex-flow: column nowrap;
   align-items: flex-start;
-  justify-content: flex-start; 
+  justify-content: flex-start;
   gap: 3rem;
-  padding: 1rem 2rem; 
-  overflow-y: auto; 
-  box-sizing: border-box; 
+  padding: 1rem 2rem;
+  overflow-y: auto;
+  box-sizing: border-box;
 }
 
 .modal-errors-card {
@@ -69,7 +73,7 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: flex-start;
-  justify-content: flex-start; 
+  justify-content: flex-start;
   gap: 0.5rem;
 }
 
@@ -84,7 +88,7 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: flex-start;
-  justify-content: flex-start; 
+  justify-content: flex-start;
   gap: 0.5rem;
 }
 
@@ -95,30 +99,26 @@
   font-size: 1.25rem;
   font-weight: 300;
 }
-  
+
 .modal-errors::-webkit-scrollbar {
-    width: 1.2rem; 
+  width: 1.2rem;
 }
 
 .modal-errors::-webkit-scrollbar-track {
-    background: #f1f1f1; 
+  background: #f1f1f1;
 }
 
 .modal-errors::-webkit-scrollbar-thumb {
-    background: #100066; 
+  background: #100066;
 }
 
 .modal-errors::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+  background: #555;
 }
-
 
 body.modal-open {
   overflow: hidden;
 }
-
-
-
 
 @media (max-width: 1215px) {
   .modal-container > h2 {
